samples/_failures_safe/1761078475_ff9096_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d38dcbb8.c: In function ‘write_data’:
./samples/SAFE/__tmp_d38dcbb8.c:128:5: error: expected declaration or statement at end of input
  128 |     for (size_t i = 0; i < sm->processed_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_d38dcbb8.c:128:5: error: expected declaration or statement at end of input
